Closed
Bug 461927
Opened 17 years ago
Closed 16 years ago
Exceptions or odd-sized thumbnails for XML pages in Tabsposé
Categories
(Camino Graveyard :: Tabbed Browsing, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino2.0
People
(Reporter: alqahira, Assigned: stuart.morgan+bugzilla)
References
()
Details
Attachments
(2 files)
|
55.25 KB,
image/png
|
Details | |
|
884 bytes,
patch
|
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
STR:
1) Load http://caminobrowser.org/blog/atom.xml (styled XML) or http://caminobrowser.org/update-tmp.xml (raw XML) or data:text/xml,foo (XML parsing error)
2) Invoke Tabsposé
3a) Observe "narrow-strip" thumbnail, or
3b) Observe blank (full-width) thumbnail and unhappy console output
Oct 28 01:29:19 Qalaat-Samaan Camino[38304]: CGBitmapContextCreateImage: invalid context
Oct 28 01:29:19 Qalaat-Samaan Camino[38304]: *** NSRunLoop ignoring exception 'Can't cache image' that raised during posting of delayed perform with target 0x9bd800 and selector 'loadNextThumbnailForViews:'
Oct 28 01:29:19 Qalaat-Samaan [0x0-0x74e74e].org.mozilla.camino[38304]: Tue Oct 28 01:29:19 Qalaat-Samaan.local Camino[38304] <Error>: CGBitmapContextCreateImage: invalid context
or
Oct 28 01:31:33 Qalaat-Samaan Camino[38336]: CGBitmapContextCreateImage: invalid context
Oct 28 01:31:33 Qalaat-Samaan Camino[38336]: *** -[NSMutableParagraphStyle contentView]: unrecognized selector sent to instance 0x15be8db0
Oct 28 01:31:33 Qalaat-Samaan Camino[38336]: *** NSRunLoop ignoring exception '*** -[NSMutableParagraphStyle contentView]: unrecognized selector sent to instance 0x15be8db0' that raised during posting of delayed perform with target 0x15b04510 and selector 'loadNextThumbnailForViews:'
If you see 3a initially, repeat step 2 and you should then see 3b from there on out.
I suppose these exceptions could possibly lead to crashes like bug 461924, but if so, they're more difficult to trigger.
Flags: camino2.0?
| Reporter | ||
Updated•16 years ago
|
Summary: Exceptions or odd-sized thumbnails for XML pages → Exceptions or odd-sized thumbnails for XML pages in Tabsposé
| Assignee | ||
Updated•16 years ago
|
Flags: camino2.0? → camino2.0+
| Reporter | ||
Comment 1•16 years ago
|
||
We'll want to check this after bug 461924 lands.
Target Milestone: --- → Camino2.0
| Reporter | ||
Comment 2•16 years ago
|
||
In a build with the patch for bug 461924 applied, I don't see any more exceptions.
In a tinderbuild from this evening, all my XML-y pages thumbnail properly. (In my own debug build, however, I continue to see either odd-shaped thumbnails or no thumbnails at all. Do others have this problem in their debug builds?)
| Reporter | ||
Comment 3•16 years ago
|
||
| Reporter | ||
Comment 4•16 years ago
|
||
Is anyone else seeing the odd thumbnails or failures in
1) release/static builds (we care most about this)
2) debug builds
Is there something I can do to figure out why my debug build is continuing to see the problem?
If release builds are free of this behavior, we can downgrade this bug (or perhaps even close it), and if only I'm seeing the behavior in debug builds, it's even more likely something to close.
Comment 5•16 years ago
|
||
I've never seen anything like this in opt/static builds - home made or official ones. I'll try to locate some more of those couple of those 'odd' file types and try some more.
| Reporter | ||
Comment 6•16 years ago
|
||
Blocking b1 for now, pending Stuart's investigation.
Flags: camino2.0b1+
| Assignee | ||
Comment 7•16 years ago
|
||
This is doubly my bad; once for writing the code this way in the first place, and once for being too quick to just assume Core weirdness when I was fixing the about:config bug, which is actually the same. <old style ad>Just remember folks: when you think "different behavior in debug and release builds", think Uninitialized Memory!</old style ad>
XML documents, not unsurprisingly, don't have an nsIDOMNSHTMLElement, so the current GetIntrinsicSize implementation bails without setting anything. We could probably find a way to get size info for XML documents, but it's low importance (worth filing though, since it would improve window zoom behavior on XML pages), and this fix needs to be made regardless.
Assignee: nobody → stuart.morgan+bugzilla
Status: NEW → ASSIGNED
Attachment #351514 -
Flags: superreview?(mikepinkerton)
| Assignee | ||
Comment 8•16 years ago
|
||
Oh, I meant to say: this fixes the "sometimes about:config is blank" bug too; the root cause of that was trying to create a canvas with an absurd (negative certainly, although wildly large might have tripped a threshold) width and/or heigh.
Comment 9•16 years ago
|
||
Comment on attachment 351514 [details] [diff] [review]
fix
sr=pink
is there any way the viewport rect can be zero? a background tab? a full-page plugin? the bookmarks view? about:blank? svg?
Updated•16 years ago
|
Attachment #351514 -
Flags: superreview?(mikepinkerton) → superreview+
| Assignee | ||
Comment 10•16 years ago
|
||
viewport is the bounds of the CHBrowserView, so there's not much that can be wrong with it. And if you do have a zero-size browser view somehow, nothing bad will happen, it'll just not have a useful thumbnail (which makes sence, since you can't see the page in that case)
| Assignee | ||
Comment 11•16 years ago
|
||
Landed on CVS trunk.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•