Camino only - Bug 461927: Ensure the canvas size for a snapshot is initialized. r/sr=pink